<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="C">C</string>
    <string name="plusMinus">+/-</string>
    <string name="divisible">%</string>
    <string name="divide">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="remove">🆇</string>
    <string name="equals">=</string>
</resources>