<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Hello"
        android:textSize="38sp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputView">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_gray"
            android:padding="16dp"
            android:text="@string/C"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <Button
            android:id="@+id/plusMinusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_gray"
            android:padding="16dp"
            android:text="@string/plusMinus"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/cancelBtn"
            app:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <Button
            android:id="@+id/divisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_gray"
            android:padding="16dp"
            android:text="@string/divisible"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/plusMinusBtn"
            app:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:background="@drawable/round_button_blue"
            android:padding="16dp"
            android:text="@string/divide"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/divisible"
            app:layout_constraintTop_toTopOf="@id/constraintLayout" />

        <!-- SECOND COLUMN /SECOND ROW -->
        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/seven"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancelBtn" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/eight"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/seven"
            app:layout_constraintTop_toBottomOf="@id/plusMinusBtn" />

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/nine"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/eight"
            app:layout_constraintTop_toBottomOf="@id/divisible" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/round_button_blue"
            android:padding="16dp"
            android:text="@string/multiply"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/nine"
            app:layout_constraintTop_toBottomOf="@id/divide" />
        <!-- THIRD COLUMN / THIRD ROW-->
        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/four"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seven" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/five"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toBottomOf="@id/eight" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/six"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toBottomOf="@id/nine" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_blue"
            android:padding="16dp"
            android:text="@string/minus"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toBottomOf="@id/multiply" />

        <!-- COLUMN  4 / ROW 4-->
        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/one"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four" />


        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/two"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toBottomOf="@id/five" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/three"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/two"
            app:layout_constraintTop_toBottomOf="@id/six" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_blue"
            android:padding="16dp"
            android:text="@string/plus"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/three"
            app:layout_constraintTop_toBottomOf="@id/minus" />

        <!-- COLUMN 5 /ROW 5 -->
        <Button
            android:id="@+id/decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/decimal"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/one" />


        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/zero"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/decimal"
            app:layout_constraintTop_toBottomOf="@id/two" />

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_white"
            android:padding="16dp"
            android:text="@string/remove"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/zero"
            app:layout_constraintTop_toBottomOf="@id/three" />

        <Button
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/round_button_blue"
            android:padding="16dp"
            android:text="@string/equals"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/remove"
            app:layout_constraintTop_toBottomOf="@id/plus" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>